# sgug-getopt

./: LICENSE  README.md  configure.ac
src/: Makefile.am
src/sgug-getopt/: Makefile.am  c.h  getopt.c
